# prompt

./: .eslintignore  .gitignore  .markdownlint.json  .prettierignore  .yarnrc.yml  Cargo.toml  README.md  binding.gyp  index.html  modules.html  package.json  tsconfig.json  typedoc.json
.github/workflows/: release.yml
assets/js/: search.js
interfaces/: promptoptions.html
lib/: lib.rs  prompt.cc
npm/android-arm64/: package.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/freebsd-x64/: package.json
npm/linux-arm-gnueabihf/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-arm64-musl/: package.json
npm/linux-x64-gnu/: package.json
npm/linux-x64-musl/: package.json
npm/win32-arm64-msvc/: package.json
npm/win32-ia32-msvc/: package.json
npm/win32-x64-msvc/: package.json
src/: index.ts
tests/: index.js
types/: discordjs__node-pre-gyp.d.ts
